--- a/readme
+++ b/readme
@@ -1,6 +1,2 @@
-Block push algo for Senior Design
-test
-Kong is here
-Sean
-chris is here
-christian is here
+# Autonomous Sumo Robot
+Algorithm designed for Raspberry Pi Pico. This robot uses three front facing IR sensors to detect opponents and three downward facing IR sensors to detect the sumo ring boundary.
