--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-# Autonomous-Sumo-Robot
+# Sumo-Robot
 
 Algorithm designed for Raspberry Pi Pico. This robot uses three front facing IR sensors to detect opponents and three downward facing IR sensors to detect the sumo ring boundary.
 Programmed with PlatformIO using the Arduino framework.This algorithm attempts to predict where the opponent/object is based on previous values read from the object detection sensors.
